fix breadcrumb text size on mobile

--- a/src/app/[locale]/css/productDetails.scss
+++ b/src/app/[locale]/css/productDetails.scss
@@ -36,6 +36,11 @@
         color: darken($main-grey, 40%);
         font-size: 0.875rem;
 
+        @media screen and (max-width:768px){
+            font-size: 0.7rem;
+            margin-bottom: .5rem;
+        }
+
         ol {
             list-style: none;
             display: flex;
